--- a/msc-data/changelog_nwp_en/index.html
+++ b/msc-data/changelog_nwp_en/index.html
@@ -350,6 +350,10 @@
 <p><a href="../../readme_en/">TOC</a> &gt;  <a href="../readme_en/">MSC data</a> &gt; CMC Operational System's changelog</p>
 <h1 id="changes-to-the-canadian-meteorological-centre-cmc-operational-system">Changes to the Canadian Meteorological Centre (CMC) Operational System</h1>
 <h2 id="2020">2020</h2>
+<h3 id="april-1-2020">April 1, 2020</h3>
+<ul>
+<li><a href="../nwp_raqdps-fw/changelog_raqdps-fw_en#Wednesday-april-1-2020">FireWork Summer 2020 - Season debut</a></li>
+</ul>
 <h3 id="january-21-2020">January 21, 2020</h3>
 <ul>
 <li><a href="../changelog_multisystems_en#tuesday-january-21-2020">New High Performance Computing Infrastructure</a></li>
@@ -378,7 +382,6 @@
 <li><a href="../nwp_rdsps/changelog_rdsps_en#wednesday-july-3-2019">Regional Deterministic Storm-surge Prediction System (RDSPS) 1.6.0</a></li>
 <li><a href="../nwp_resps/changelog_resps_en#wednesday-july-3-2019">Regional Ensemble Storm-surge Prediction System (RESPS) 1.2.0</a></li>
 <li><a href="../nwp_raqdps/changelog_raqdps_en#wednesday-july-3-2019">Regional Air Quality Deterministic Prediction System (RAQDPS) 021</a></li>
-<li><a href="../nwp_raqdps-fw/changelog_raqdps-fw_en#wednesday-july-3-2019">FireWork Prediction System 021</a></li>
 </ul>
 <h3 id="april-15-2019">April 15, 2019</h3>
 <ul>
@@ -411,7 +414,6 @@
 <li><a href="../nwp_hrdpa/changelog_hrdpa_en#tuesday-september-18-2018">High Resolution Deterministic Precipitation Analysis (HRDPA (CaPA-2.5km)) 4.5.0</a></li>
 <li><a href="../nwp_wam-global/changelog_wam-global_en#tuesday-september-18-2018">Retirement of the wave system "WAM-Global" (GDWPS)</a></li>
 <li><a href="../nwp_raqdps/changelog_raqdps_en#tuesday-september-18-2018">Regional Air Quality Deterministic Prediction System (RAQDPS) 020</a></li>
-<li><a href="../nwp_raqdps-fw/changelog_raqdps-fw_en#tuesday-september-18-2018">FireWork Prediction System 020</a></li>
 </ul>
 <h3 id="june-28-2018">June 28, 2018</h3>
 <ul>
