--- a/msc-data/changelog_nwp_fr/index.html
+++ b/msc-data/changelog_nwp_fr/index.html
@@ -350,6 +350,10 @@
 <p><a href="../../readme_fr/">TdM</a> &gt; <a href="../readme_fr/">Données du SMC</a> &gt; Le journal des modifications du système opérationnel du CMC</p>
 <h1 id="changements-au-systeme-operationnel-du-centre-meteorologique-canadien-cmc">Changements au système opérationnel du Centre Météorologique Canadien (CMC)</h1>
 <h2 id="2020">2020</h2>
+<h3 id="1-avril-2020">1 avril 2020</h3>
+<ul>
+<li><a href="../nwp_raqdps-fw/changelog_raqdps-fw_fr#le-mercredi-1-avril-2020">FireWork d'été 2020 - Début de la saison</a></li>
+</ul>
 <h3 id="21-janvier-2020">21 janvier 2020</h3>
 <ul>
 <li><a href="../changelog_multisystems_fr#le-mardi-21-janvier-2020">Nouvelle infrastructure de calcul haute performance</a></li>
@@ -378,7 +382,6 @@
 <li><a href="../nwp_riops/changelog_riops_fr#le-mercredi-3-juillet-2019">Système Régional de Prévision Océan-Glace (SRPOG) 2.0.0</a></li>
 <li><a href="../nwp_rdsps/changelog_rdsps_fr#le-mercredi-3-juillet-2019">Système régional de prévision déterministe d’onde de tempête (SRPDOT) 1.6.0</a></li>
 <li><a href="../nwp_resps/changelog_resps_fr#le-mercredi-3-juillet-2019">Système régional de prévision d'ensemble d’onde de tempête (SRPEOT) 1.2.0</a></li>
-<li><a href="../nwp_raqdps/changelog_raqdps_fr#le-mercredi-3-juillet-2019">Système régional de prévision déterministe de la qualité de l'air (SRPDQA) 021</a></li>
 </ul>
 <h3 id="15-avril-2019">15 avril 2019</h3>
 <ul>
@@ -411,7 +414,6 @@
 <li><a href="../nwp_hrdpa/changelog_hrdpa_fr#le-mardi-18-septembre-2018">Analyse déterministe de précipitation à haute résolution (AHRDP (CaPA-2.5km)) 4.5.0</a></li>
 <li><a href="../nwp_gdwps/changelog_gdwps_fr#le-mardi-18-septembre-2018">Fin du service pour le système de vague "WAM-Global"</a></li>
 <li><a href="../nwp_raqdps/changelog_raqdps_fr#le-mardi-18-septembre-2018">Système régional de prévision déterministe de la qualité de l'air (SRPDQA) 020</a></li>
-<li><a href="../nwp_raqdps-fw/changelog_raqdps-fw_fr#le-mardi-18-septembre-2018">Système de prévision FireWork 020</a></li>
 </ul>
 <h3 id="28-juin-2018">28 juin 2018</h3>
 <ul>
